--- a/index.html
+++ b/index.html
@@ -72,11 +72,33 @@
             </div>
 
         </section>
+
+
+
     </div>
 
 
     <footer>
-
+        <div class="w-25 mx-auto text-center ">
+            <h2>Pro Edu</h2>
+          <p>Office 41, Zawaya Buildin, Ghala Muscat, Sultanate of Oman</p>
+          <nav>
+              <ul class="d-flex footer-menu">
+                  <li class="px-2 ">Privacy Ploicy</li>
+                  <li class="px-2 "> | </li>
+                  <li class="px-2 "> Terms of use</li>
+              </ul>
+          </nav>
+  
+          <div class="text-center text-white socil-media">
+              <ul class="d-flex footer-menu">
+                  <li class="px-2"><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
+                  <li class="px-2"><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                  <li class="px-2"><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
+                  <li class="px-2"><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
+              </ul>
+          </div>
+          </div>
 
     </footer>
     <script src="js/bootstrap.min.js"></script>
