Trusted companies section added

--- a/index.html
+++ b/index.html
@@ -73,7 +73,22 @@
 
         </section>
 
+        <!-- Trusted companies section -->
+        <section class="trusted-companies-area my-5 d-lg-block d-md-none d-none">
 
+
+            <h2 class="text-center my-4"> Trusted by over 800+ companies</h2>
+
+            <div class="d-flex justify-content-evenly">
+                <img class="mx-3 logo-img" src="images/company/company-1.png" alt="">
+                <img class="mx-3 logo-img" src="images/company/company-2.png" alt="">
+                <img class="mx-3 logo-img" src="images/company/company-3.png" alt="">
+                <img class="mx-3 logo-img" src="images/company/company-4.png" alt="">
+                <img class="mx-3 logo-img" src="images/company/company-5.png" alt="">
+                <img class="mx-3 logo-img" src="images/company/company-6.png" alt="">
+            </div>
+
+        </section>
 
     </div>
 
