Ready to join and FAQ section added

--- a/index.html
+++ b/index.html
@@ -70,9 +70,61 @@
                   <span class="visually-hidden">Next</span>
                 </button>
             </div>
-
         </section>
 
+        
+        <!-- Ready to join  -->
+
+        <section class="p-3 p-md-5 p-lg-5 bg-info bg-gradient rounded-2">
+            <div class="row d-flex align-items-center ">
+                <div class="col-lg-6 col-md-12 text-center text-md-center text-lg-start text-light">
+                    <h3>Ready to join?</h3>
+                    <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                </div>
+                <div class="col-lg-6 col-md-12 text-center text-lg-end text-md-center">
+                    <div class="btn btn-light fw-bold text-primary">Register Now</div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Teem section  -->
+
+        <section class="my-5">
+          <div class="col-sm-12 col-md-6 col-lg-6 text-center text-md-start text-lg-start">
+            <h2>Meet Our Successfull Students</h2>
+            <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+          </div>
+          <div class="row my-4">
+            <div class="col-lg-3 col-md-6 ">
+              <img class="img-fluid" src="images/student/student-1.png" alt="">
+              <div class="about-student ps-3 py-4 border rounded-2">
+                <h5>Md Alamin</h5>
+                <span class="fw-light">Software Engineer</span>
+              </div>
+            </div>
+            <div class="col-lg-3 col-md-6">
+              <img class="img-fluid" src="images/student/student-2.png" alt="">
+              <div class="about-student ps-3 py-4 border rounded-2">
+                <h5>Rupali Akter</h5>
+                <span class="fw-light">Motion Design</span>
+              </div>
+            </div>
+            <div class="col-lg-3 col-md-6">
+              <img class="img-fluid" src="images/student/student-3.png" alt="">
+              <div class="about-student ps-3 py-4 border rounded-2">
+                <h5>Md Alvi</h5>
+                <span class="fw-light">Graphic Designer</span>
+              </div>
+            </div>
+            <div class="col-lg-3 col-md-6">
+              <img class="img-fluid" src="images/student/student-4.png" alt="">
+              <div class="about-student ps-3 py-4 border rounded-2">
+                <h5>Ms Nijum</h5>
+                <span class="fw-light">Web Developer</span>
+              </div>
+            </div> 
+          </div>
+        </section>
 
         <!-- FAQ / Accordion Section-->
 
