--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <header>
                 <div class="p-4">
                     <div class="row">
-                        <div class="col-2 col-md-2 col-lg-10">
+                        <div class="col-2 col-md-2 col-lg-2">
                             <h3>Edu Pro</h3>
                         </div>
 
@@ -23,7 +23,7 @@
 
                         <div class="loptop-menu d-none  d-sm-none d-md-none d-lg-block col-md-10 col-lg-10">
                             <div class="text-center">
-                                <ul class="header-menu d-flex justify-content-center  align-items-center">
+                                <ul class="header-menu d-flex justify-content-center align-items-center">
                                     <li>Home</li>
                                     <li>Courses</li>
                                     <li>Deals</li>
@@ -38,17 +38,17 @@
                         </div>
 
                         <!-- mobil menu  -->
-                        <div class="mobil-menu text-end col-sm-10 d-sm-block d-md-block d-lg-none">
-                            <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight"><i class="fa-solid fa-bars"></i> </button>
+                        <div class="text-end col-sm-10 d-sm-block d-md-block d-lg-none">
+                            <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight"><i class="fa-solid fa-bars"></i></button>
         
-                            <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
+                            <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
                                 <div class="offcanvas-header">
-                                    <h5 class="offcanvas-title" id="offcanvasRightLabel">edTech BD </h5>
+                                    <h5 class="offcanvas-title" id="offcanvasRightLabel">edTech BD</h5>
                                     <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                                 </div>
                                 <div class="offcanvas-body">
-                                    <ul class="mobil-menu">
-                                        <li>Home</li>
+                                    <ul class="mobil-menu text-start">
+                                        <li><a class="text-decoration-none text-dark" href="index.html">Home</a></li>
                                         <li>Courses</li>
                                         <li>Deals</li>
                                         <li>Success</li>
@@ -354,7 +354,7 @@
         <!-- footer area  -->
 
         <footer class="px-2 py-5 p-lg-5 p-md-5 bg-dark text-light">
-            <div class="col-12 col-md-4 col-lg-3 mx-auto text-center">
+            <div class="col-12 col-md-8 col-lg-4 mx-auto text-center">
                 <h2>Pro Edu</h2>
                 <p>Office 41, Zawaya Buildin, Ghala Muscat, Sultanate of Oman</p>
                 <nav>
