--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
                         <!-- loptop menu  -->
 
-                        <div class="loptop-menu d-none  d-sm-none d-md-none d-lg-block col-md-10 col-lg-10">
+                        <div class="loptop-menu d-none d-sm-none d-md-none d-lg-block col-md-10 col-lg-10">
                             <div class="text-center">
                                 <ul class="header-menu d-flex justify-content-center align-items-center">
                                     <li>Home</li>
@@ -40,7 +40,7 @@
                         <!-- mobil menu  -->
                         <div class="text-end col-sm-10 d-sm-block d-md-block d-lg-none">
                             <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight"><i class="fa-solid fa-bars"></i></button>
-        
+
                             <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
                                 <div class="offcanvas-header">
                                     <h5 class="offcanvas-title" id="offcanvasRightLabel">edTech BD</h5>
@@ -58,7 +58,6 @@
                                 </div>
                             </div>
                         </div>
-                        
                     </div>
                 </div>
             </header>
@@ -220,7 +219,32 @@
                         <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
                     </div>
                     <div class="col-lg-6 col-md-12 text-center text-lg-end text-md-center">
-                        <div class="btn btn-light fw-bold text-primary">Register Now</div>
+                        <!-- Button trigger modal -->
+                        <button type="button" class="btn btn-light fw-bold text-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">Register Now</button>
+                    </div>
+                </div>
+                <!-- Modal -->
+                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="exampleModalLabel">Register Now</h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                <div class="Register-form w-75 mx-auto">
+                                    <form action="" class="d-flex flex-column">
+                                        <input type="text" placeholder="Your Name" />
+                                        <input type="email" name="" id="" placeholder="Your Email" />
+                                        <input type="password" name="" id="" placeholder="****" />
+                                        <input type="submit" value="Register" />
+                                    </form>
+                                </div>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </section>
