--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
             <!-- header section  -->
             <header>
                 <div class="p-4">
-                    <div class="row">
-                        <div class="col-2 col-md-2 col-lg-2">
+                    <div class="row d-flex">
+                        <div class="col-3 col-md-3 col-lg-2">
                             <h3>Edu Pro</h3>
                         </div>
 
                         <!-- loptop menu  -->
 
-                        <div class="loptop-menu d-none d-sm-none d-md-none d-lg-block col-md-10 col-lg-10">
+                        <div class="loptop-menu d-none d-sm-none d-md-none d-lg-block col-lg-10">
                             <div class="text-center">
                                 <ul class="header-menu d-flex justify-content-center align-items-center">
                                     <li>Home</li>
@@ -38,7 +38,7 @@
                         </div>
 
                         <!-- mobil menu  -->
-                        <div class="text-end col-sm-10 d-sm-block d-md-block d-lg-none">
+                        <div class="text-end col-9 col-sm-9 col-md-9 d-lg-none">
                             <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight"><i class="fa-solid fa-bars"></i></button>
 
                             <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
