--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                     <div class="col-10 col-md-6 col-lg-3 text-center mx-auto my-3 my-md-0 my-lg-0">
                         <img class="img-fluid" src="images/student/student-4.png" alt="" />
                         <div class="ps-1 ps-md-3 ps-lg-3 py-3 py-md-4 py-lg-4 border rounded-2">
-                            <h5>Ms Nijum</h5>
+                            <h5>MR Khan</h5>
                             <span class="fw-light">Web Developer</span>
                         </div>
                     </div>
@@ -398,16 +398,16 @@
                 <div class="text-center text-white socil-media">
                     <ul class="d-flex footer-menu justify-content-center">
                         <li class="px-md-2">
-                            <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                            <a href="https://www.facebook.com/wpmdalamin"><i class="fa-brands fa-facebook-f"></i></a>
                         </li>
                         <li class="px-2">
-                            <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                            <a href="https://twitter.com/wp_mdalamin"><i class="fa-brands fa-twitter"></i></a>
                         </li>
                         <li class="px-2">
-                            <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                            <a href="https://www.linkedin.com/in/wp-mdalamin/"><i class="fa-brands fa-linkedin-in"></i></a>
                         </li>
                         <li class="px-2">
-                            <a href="#"><i class="fa-brands fa-youtube"></i></a>
+                            <a href="https://www.youtube.com/"><i class="fa-brands fa-youtube"></i></a>
                         </li>
                     </ul>
                 </div>
